[package]
name = "xget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
ctrlc = "3.4.0"
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.19"
num_cpus = "1.16.0"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
threadpool = "1.8.1"
